syncthing/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: syncthing
  labels:
    app.kubernetes.io/name: syncthing
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: syncthing
  template:
    metadata:
      labels:
        app.kubernetes.io/name: syncthing
    spec:
      containers:
        - name: syncthing
          image: syncthing/syncthing:latest
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
          ports:
            - name: http
              containerPort: 8384
            - name: files-tcp
              containerPort: 22000
              protocol: TCP
            - name: files-quic
              containerPort: 22000
              protocol: UDP
            - name: discovery
              containerPort: 21027
              protocol: UDP
          volumeMounts:
            - name: syncthing-volume
              mountPath: /var/syncthing
              readOnly: false
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: "Always"
      volumes:
        - name: syncthing-volume
          persistentVolumeClaim:
            claimName: syncthing-pvc
