syncthing/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: syncthing
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: syncthing
  ports:
  - name: http
    port: 8384
    targetPort: http
    nodePort: 30080
