syncthing/svc-http.yaml
apiVersion: v1
kind: Service
metadata:
  name: syncthing-http
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: syncthing
  ports:
  - name: http
    port: 8384
    targetPort: http
