syncthing/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: syncthing
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: syncthing
  ports:
  - name: files-tcp
    nodePort: 32000
    port: 22000
    targetPort: files-tcp
    protocol: TCP
  - name: files-quic
    nodePort: 32000
    port: 22000
    targetPort: files-quic
    protocol: UDP
  - name: discovery
    nodePort: 31027
    port: 21027
    protocol: UDP
