syncthing/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: syncthing
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: syncthing-http
            port:
              name: http
